...
      ),
      loading: <AuthSignInGmailOauthLoadingStateView />,
      error: <AuthSignInGmailOauthErrorStateView onRetry={onRetry} />,
    };

    return (
      <View style={styles.screen} testID="auth-signIn-gmailOauth-screen">
        <AuthSignInGmailOauthHeaderView />
        <View style={styles.card}>{content[state]}</View>
      </View>
    );
  },
);
...
