...
        <TrackerWatchlistListEmptyStateView onAddPress={onAddProductsPress} />
      ),
    };

    return (
      <ListTemplate
        testID="watchlist-list-screen"
        topBar={
          <TopAppBar
            type="small"
            title={t("watchlist.title")}
            trailingContent={
              <TrackerWatchlistListAddButtonView onPress={onAddProductsPress} />
            }
            testID="watchlist-list-title"
          />
        }
        refreshControl={
          <RefreshControl refreshing={isRefreshing} onRefresh={onRefresh} />
        }
        contentContainerStyle={styles.scrollContent}
...
