...
      ),
      error: <TrackerCatalogBrowseEmptyStateView />,
    };

    return (
      <ListTemplate
        testID="catalog-browse-screen"
        topBar={
          <TopAppBar
            type="small"
            title={t("catalog.title")}
            testID="catalog-browse-title"
          />
...
