...
        <TextInputField
          control={control}
          name="storeName"
          label={t("accounts.form.fields.boutiqueName.label")}
          placeholder={t("accounts.form.fields.boutiqueName.placeholder")}
          error={errors.storeName?.message}
          testID="edit-account-form-storeName"
        />
        <TextInputField
          control={control}
          name="saName"
          label={t("accounts.form.fields.saName.label")}
          placeholder={t("accounts.form.fields.saName.placeholder")}
...
          control={control}
          name="notes"
          label={t("accounts.form.fields.notes.label")}
          placeholder={t("accounts.form.fields.notes.placeholder")}
          multiline
          error={errors.notes?.message}
          testID="edit-account-form-notes"
        />
      </FullScreenDialog>
    );
  },
);

...
