...
      </Pressable>
    ) : undefined;

    return (
      <>
        <ListTemplate
          testID="accounts-list-screen"
          topBar={
            <TopAppBar
              type="small"
              title={t("accounts.list.title")}
              trailingContent={addProductsButton}
              testID="accounts-list-title"
...
