...
      error: <TrackerAccountsDetailErrorStateView onRetry={onRetry} />,
    };

    return (
      <>
        <DetailTemplate
          testID="accounts-detail-screen"
          topBar={
            <TopAppBar
              type="small"
              title={t("accounts.detail.title")}
              navigationIcon="arrow-back"
              onNavigationPress={onBack}
...
